--- a/content/angels.html
+++ b/content/angels.html
@@ -11,11 +11,9 @@ weight = 2
 <h2>Angel Fest 2015</h2>
 <p>A heavenly community celebration &amp; fundraiser.<br>
 
-December 12, 2015 <br>
-
-Bashaw United Church</p>
+December 12, 2015 <br></p>
 
 
-<p>All funds raised will go directly to the Bashaw United Church Community Impact Fund, ensuring that programs, volunteers and space are provided for the community in areas that encourage compassion, understanding, courage, love, appreciation and teamwork.</p>
+<p>All funds raised will go directly to the  Community Impact Fund, ensuring that programs, volunteers and space are provided for the community in areas that encourage compassion, understanding, courage, love, appreciation and teamwork.</p>
 <p><a href="/event/Angels-Among-Us/" class="button">Schedule of Events</a></p>
 <br><script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=BashawAngels&amp;height=1500&amp;flexible=1&amp;dont_load_new_posts=0&amp;more_button=0&amp;show_rebelnav=1"></script>
