--- a/content/donate.html
+++ b/content/donate.html
@@ -8,4 +8,4 @@ weight = 999
 +++
 <p>As a church community, we believe in living God’s love and sharing God’s love.  In fact, it’s written right into our Vision Statement.  And that’s why we’re doing big things in the Bashaw community, 7 days a week!  Please consider making a donation today, to support the work we do in the community today, tomorrow, and every day.</p>
 
-<p>All funds raised go directly to the Bashaw United Church Community Impact Fund, ensuring that programs, volunteers and space are provided for the community in areas that encourage compassion, understanding, courage, love, appreciation and teamwork.</p>
+<p>All funds raised go directly to the Cool Community Impact Fund, ensuring that programs, volunteers and space are provided for the community in areas that encourage compassion, understanding, courage, love, appreciation and teamwork.</p>
